# wechat-legobot

./: .gitignore  README.md  State.py  WechatBot.py  utils.py
Wcf/: .gitignore  API.py  MxMessageParser.py  README.md  Wcf.py  WxMsg.py  __init__.py  pyproject.toml  requirements.txt  utils.py
Wcf/config/: config-template.yaml
config/: config-template.yaml
plugins/: README.md  pipeline.py
plugins/commander_ops/: help_doc.py  main.py
plugins/llm/: MsgQueue.py  ThreadPool.py  main.py  sys_prompt.py
plugins/llm/config/: config-template.yaml
plugins/owner_ops/: main.py
